# dive-into-5g

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  docker-compose.yaml  terminal.Dockerfile  workplace.Dockerfile
.github/workflows/: workflow.yml
.gitlab/: jobs.gitlab-ci.yml  pipeline.gitlab-ci.yml
hello/: CMakeLists.txt
qpsk/: CMakeLists.txt  reader.hpp  snr.hpp
qpsk-ber-calculator/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
qpsk-ber-calculator/src/: ber_calculator.hpp  main.cpp  options.hpp
qpsk-ber-calculator/test/: ber_calculator_test.cpp
qpsk-bits-generator/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
qpsk-bits-generator/src/: main.cpp  options.hpp
qpsk-demodulator/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
qpsk-demodulator/src/: demodulator.hpp  main.cpp  reader.hpp  symbol.hpp
qpsk-demodulator/test/: demodulator_test.cpp  reader_test.cpp
qpsk-modulator/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
qpsk-modulator/src/: main.cpp  modulator.hpp
qpsk-modulator/test/: modulator_test.cpp
qpsk-noise-injector/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
qpsk-noise-injector/src/: main.cpp  noise_injector.hpp
qpsk-noise-injector/test/: noise_injector_test.cpp
qpsk/test/: reader_test.cpp  snr_test.cpp
